[package]
name = "platformer_sandbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_asset_loader = { version = "0.12.0", features = [
    "2d",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", branch = "refactor/tilemap-rewrite" }
bevy_ecs_tilemap = "0.7"
bevy_rapier2d = "0.16.0"
bevy-inspector-egui = "0.12"
iyes_loopless = "0.7"
iyes_progress = { version = "0.4", features = ["iyes_loopless"] }
ldtk_rust = "0.5.3"
leafwing-input-manager = "0.5.1"
serde = "1.0.136"
serde_json = "1.0.79"

[features]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3